# Transerv

./: .env  .gitignore  .pylintrc  Dockerfile  Infographic.html  README.md  TODO.txt  app.py  cli.py  config.py  decorators.py  docker-build  docker-run  error_handlers.py  gunicorn.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
forms/: location.py  observation.py  observation_form.py  project_form.py  query_form.py  site_form.py  species.py  survey.py  survey_form.py  user.py  user_form.py
handlers/: decorators.py  errors.py  processors.py
models/: data.py  initialize.py
routes/: ajax.py  auth.py  entry.py  projects.py  projectsites.py  query.py  reports.py  user.py
static/css/: style.css
static/data/: wildlife.db
static/files/: wildlife_db-ddl.sql
templates/: base.html  dashboard.html  observations.html
templates/auth/: login.html  register.html
templates/entry/: observation_add.html  observation_edit.html  survey_add.html  survey_edit.html  surveys.html
templates/error/: error.html
templates/project/: project_edit.html  projects.html  projectsite_edit.html  projectsites.html
templates/reports/: locations.html  map.html  project.html  sites.html  species.html  surveys.html
templates/user/: user_edit.html  user_list.html
tests/: endpoints.py  test_endpoints.py  test_utils.py  utils.py
user/: role.py
util/: datetimeutil.py  form.py
vanna_ai/: TRAIN_AI.py
